change update pages

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ function Verification(theForm)
 <div class="container login-container">
 	<div class="row">
 		<div class="col-md-6 login-form-1">
-			<img  src="image/fond.png" width="350" class="center">
+			<img  src="image/logo2.png" class="img-fluid" alt="Responsive image" width="400px">
 		</div>
 		<div class="col-md-6 login-form-2">
 			
