CHANGE NAME FTWKF

--- a/accueil.html
+++ b/accueil.html
@@ -98,7 +98,7 @@
                         <div class="row d_flex">
                            <div class="col-md-6">
                               <div class="text-bg text-right">
-                                 <h1>الجامعة التونسية للوشو كونغ فو
+                                 <h1>الجامعة التونسية للوشو كونغ فو و الرياضات التابعة و الرياضات التابعة
                                     <br>FTWKF</h1>
                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
                                  <a href="#">Enregistrer </a>
@@ -121,7 +121,7 @@
                         <div class="row d_flex">
                            <div class="col-md-6">
                             <div class="text-bg text-right">
-                                <h1>الجامعة التونسية للوشو كونغ فو
+                                <h1>الجامعة التونسية للوشو كونغ فو و الرياضات التابعة
                                    <br>FTWKF</h1>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
                                 <a href="#">Enregistrer </a>
