--- a/courrier/index.html
+++ b/courrier/index.html
@@ -6,7 +6,7 @@
 ************************************************** -->
 <HTML>
 <HEAD>
-<TITLE>FEDERATION TUNISIENNE DE WUSHU KUNG FU </TITLE>
+<TITLE>FEDERATION TUNISIENNE DE WUSHU KUNG FU ET DISCIPLINES ASSOCIEES </TITLE>
 <META NAME="Author" CONTENT="Usager non enregistré">
 <meta http-equiv="Content-Type" content="text/html; charset= UTF8 ">
 <META NAME="Description" CONTENT="">
