page-top button & view all list

--- a/courrier/ident.htm
+++ b/courrier/ident.htm
@@ -34,7 +34,7 @@ function Verification(theForm)
   
 
 </p>
-<form  name="form1" method="post" action= "ident.php" onSubmit= "writecookie()"  >
+<form  name="form1" method="post" action= "ident.php"  >
 <p align="center">
 <h2 align="center"><strong>Identification</strong>
 </h2>
