--- a/ident.htm
+++ b/ident.htm
@@ -105,7 +105,7 @@ function Verification(theForm)
 </p>
 	
 
-<!-- <form  name="form1" method="post" action= "ident.php" onSubmit= "writecookie()"  >
+<!-- <form  name="form1" method="post" action= "ident.php"   >
 <p align="center">
 <h2 align="center"><strong>Identification</strong>
 </h2>
@@ -135,7 +135,7 @@ function Verification(theForm)
 		</div>
 		<div class="col-md-6 login-form-2">
 			
-			<form  name="form1" method="post" action= "ident.php" onSubmit= "writecookie()" >
+			<form  name="form1" method="post" action= "ident.php"  >
 				<h3>Connectez-vous </h3>
 				<br>
 				<div class="form-group">
