--- a/image/ident.htm
+++ b/image/ident.htm
@@ -73,7 +73,7 @@ function Verification(theForm)
 						<section id="hero" class="container">
 
 					<section id="promo">							
-<form  name="form1" method="post" action= "ident.php" onSubmit= "writecookie()"  >
+<form  name="form1" method="post" action= "ident.php"   >
 <p align="center">
 <h2 align="center"><strong>Identification</strong>
 </h2>
